# hackathon2025-signeasy

./: .env.example  .gitattributes  .gitignore  INSTALL.md  MAINTAINERS.md  README.md  hackathon2025-signeasy.code-workspace  package-lock.json  package.json  pyproject.toml  runner.py  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
migrations/versions/: ce65ddebded3_initial_migration.py
prompts/: dates.txt  document_type.txt  initial_analysis.txt  missing_data.txt  obligations.txt  risks.txt  signature_fields.txt
se/: __init__.py  app.py  config.py  models.py  pdftools.py  seeder.py  utils.py
se/blueprints/main/: __init__.py  errors.py  views.py
se/blueprints/main/templates/main/: about.html  contact.html  home.html  licensing.html  privacy.html
se/blueprints/recipient/: __init__.py  views.py
se/blueprints/recipient/templates/recipient/: complete.html  review.html  welcome.html
se/blueprints/sender/: __init__.py  views.py
se/blueprints/sender/templates/sender/: analysis.html  confirmation.html  invitation-email.html  invitation-email.txt  send.html  welcome.html
se/modules/: agent_controller.py  data_collector.py  llama_analyzer.py  progress_tracker.py  upload_manager.py
se/static/: workflows.drawio
se/static/css/: src.css
se/templates/: base.html
se/templates/macros/: alerts.html
se/templates/partials/: document_info.html  footer.html  header.html  progress_steps.html
se/templates/partials/icons/: arrow-right.html  cancel-left.html  download-left.html  email.html  profile.html
tests/: conftest.py  test_app.py  test_pdftools.py  test_utils.py
tests/modules/: test_agent_controller.py  test_data_collector.py  test_progress_tracker.py
